syntax = "proto3";

option go_package = ".;kvstore";

package kvstore;

service Storage {
    rpc Set(SetRequest) returns (SetReply) {}
    rpc Get(GetRequest) returns (GetReply) {}
    rpc Del(DelRequest) returns (DelReply) {}
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetReply {
    string err = 1;
    string result = 2;
}

message GetRequest {
    string key = 1;
}

message GetReply {
    string err = 1;
    string result = 2;
}

message DelRequest {
    string key = 1;
}

message DelReply {
    string err = 1;
    string result = 2;
}
